--- a/index.html
+++ b/index.html
@@ -82,7 +82,12 @@
 											<h3>GoodCabs Data Analysis</h3>
 										</header>
 									</article>
-									
+									<article class="item">
+										<a href="https://github.com/SJDOI/OTT-domain" target="_blank" class="image fit"><img src="images/ott domain.jpeg" alt="" /></a>
+										<header>
+											<h3>OTT Domain</h3>
+										</header>
+									</article>
 								</div>
 							</div>
 
